# trading-app

./: .dockerignore  .gitignore  AUDIT.md  Dockerfile  MakeFile  PROJECT_BLUEPRINT.md  README.md  deploy.sh  docker-compose.yml  init.sql  insert_initial_ohlc.py  main.py  pyproject.toml  sql.py
apps/distributor/: Dockerfile
apps/receiver/: Dockerfile  config.toml  dependencies.py  deribit_client.py  entrypoint.sh  main.py  redis_publisher.py
config/: config.py  config_strategies.toml  security.toml  strategies.toml
configuration/: config.py  config_oci.py
core/: error_handler.py  health.py  security.py  service_manager.py
core/db/: error_handler.py  postgres.py  redis.py  sqlite.py
infrastructure/: docker-compose.yml
receiver/: Dockerfile  config.toml  docker-compose.yml  main.py  pyproject.toml  requirements.txt
receiver/src/: allocating_ohlc.py  deribit_ws.py  distributing_ws_data.py  get_instrument_summary.py  main.py  starter.py
restful_api/: connector.py
restful_api/deribit/: end_point_params_template.py
restful_api/telegram/: end_point_params_template.py
scripts/: user_setup.py
shared/: caching.py  config.py  error_handling.py  redis.py  requirements.txt  string_modification.py  system_tools.py  template.py  time_modification.py
shared/config/: exchange_loader.py  settings.py  settings.toml
shared/configuration/: exchange_loader.py  settings.py
shared/db_management/: redis_client.py  sqlite_management.py
shared/streaming/: utilities.py
src/data_cleaning/: pruning_db.py
src/executor/: Dockerfile  pyproject.toml
src/receiver/: Dockerfile  pyproject.toml  setup.py
src/scripts/: app_relayer  app_scalping  app_transactions
src/shared/: config.py  error_handling.py  logging.py  pyproject.toml  redis__ready_to_delete.py  requirements.txt  security.py  setup.py  system_tools.py
src/shared/config/: config.py  constants.py  loader.py  models.py  runtime_settings.py  settings.py  strategies.toml
src/shared/db/: redis.py  sqlite.py
src/shared/db_management/: redis_client.py  redis_client__ready_to_delete.py  sqlite_management.py
src/shared/utils/: authentication.py  caching.py  error_handling.py  string_modification.py  system_tools.py  template.py  time_modification.py
streaming_helper/: deribit.py
streaming_helper/data_receiver/: deribit.py
streaming_helper/streaming/: deribit.py
streaming_helper/utilities/: system_tools.py
tests/unit/: conftest.py
trading/processor/: Dockerfile
trading/receiver/: Dockerfile  health_check.py  pyproject.toml
trading/receiver/receiver/deribit/: distributing_ws_data.py  main.py
trading/receiver/src/deribit/: Dockerfile  main.py
trading/receiver/src/receiver/deribit/: deribit_ws.py  distributing_ws_data.py  get_instrument_summary.py  main.py  starter.py
trading/shared/: pyproject.toml
trading/shared/src/: logging.py
trading/shared/src/shared/config/: settings.py
trading/shared/src/shared/db/: sqlite.py
trading/shared/src/shared/utils/: caching.py
(+90 files in other folders)
