[project]
name = "trading-receiver"
version = "0.1.0"
description = "Deribit market data receiver"
requires-python = ">=3.13"

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project.dependencies]
uvloop = "==0.19.0"
websockets = "==12.0"
aioredis = "==2.0.1"
orjson = "==3.10.3"
loguru = "==0.7.2"
python-dotenv = "==1.0.1"
pydantic = "==2.7.1"
aiohttp = "==3.9.5"