
[project]
name = "shared"
version = "1.0.0"
dependencies = [
    "aiohttp==3.12.7",
    "aiosqlite>=0.20.0,<1.0.0",
    "asyncpg==0.30.0",
    "dataclassy",
    "loguru>=0.7.0,<1.0.0",
    "orjson==3.10.18",
    "redis>=5.0.0,<6.0.0",
#    "pydantic==2.11.5",
#    "pydantic-core==2.33.2",
#    "pydantic-settings",
    "python-dotenv>=1.0.0,<2.0.0",
    "tomli==2.0.0",
]

[tool.pytest.optional-dependencies]
test = [
    "pytest>=7.0",
    "pytest-asyncio>=0.20.0",
    "pytest-mock>=3.0",
    "asynctest>=0.13",
    "httpx>=0.24.0",
    "freezegun>=1.0"  # For time-based tests
]