# receiver/pyproject.toml
[build-system]
requires = ["setuptools>=65", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "receiver"
version = "1.0.0"
dependencies = [
    "websockets>=12.0",
    "oci>=2.125",
    "uvloop>=0.19"
]

# Explicitly define packages
[tool.setuptools]
packages = [
    "receiver",
    "receiver.deribit"
]